style fix on div height and overflow

--- a/app/assets/stylesheets/kairos.css.scss
+++ b/app/assets/stylesheets/kairos.css.scss
@@ -150,6 +150,8 @@ ul.comments {
   background-color: #FFFFFF;
   padding: 20px;
   max-width: 650px;
+  max-height: 500px;
+  overflow: scroll;
 }
 
 ul#user-articles {
